apps/homepage/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    gateway-access: private
