apps/homepage/kustomization/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-private
spec:
  parentRefs:
  - name: private
    namespace: traefik
    sectionName: websecure-home
  hostnames:
  - home.yiannis.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: authentik
    backendRefs:
    - name: homepage
      port: 3000
