apps/homepage/kustomization/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homepage-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homepage
      ports:
        - protocol: TCP
          port: 3000
